Added tests for #312